added borders to table

--- a/assessment.html
+++ b/assessment.html
@@ -14,18 +14,18 @@
       <p><strong>Hey</strong>, did one of you tell Stanley that I have asthma, 'cause I don't. If it gets out, they won't let me scuba. If I can't scuba,
         then what's this all been about? What am I working toward?</p>
     <h1>Table</h1>
-      <table>
+      <table cellspacing="2" bgcolor="#000000">
         <thead>
-          <tr>
+          <tr bgcolor="#ffffff">
             <th colspan="6">Scores By Quarter</th>
           </tr>
-          <tr>
+          <tr bgcolor="#ffffff">
             <th rowspan="2">Team Name</th>
             <th colspan="2">First Half</th>
-            <th colspan="2">Second Half</th>
+            <th colspan="2"> Second Half</th>
             <th rowspan="2">Final</th>
           </tr>
-          <tr>
+          <tr bgcolor="#ffffff">
             <th>Q1</th>
             <th>Q2</th>
             <th>Q3</th>
@@ -33,7 +33,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr bgcolor="#ffffff">
             <td>Cleveland</td>
             <td>7</td>
             <td>6</td>
@@ -41,7 +41,7 @@
             <td>13</td>
             <td>29</td>
           </tr>
-          <tr>
+          <tr bgcolor="#ffffff">
             <td>Pittsburgh</td>
             <td>0</td>
             <td>14</td>
@@ -51,7 +51,7 @@
           </tr>
         </tbody>
         <tfoot>
-          <tr>
+          <tr bgcolor="#ffffff">
             <td><strong>Total</strong></td>
             <td><strong>7</strong></td>
             <td><strong>20</strong></td>
